# hrms-auto-punch

./: .gitignore  .pdm-python  hrms_login.scpt  pyproject.toml  readme.md
src/: history_data.py  history_viewer.py  login.py  main.py
src/utils/: __init__.py  global_vars.py  util_functions.py
src/utils/driver_apis/: btn_driver_apis.py  get_value_driver_apis.py  insert_input_driver_apis.py  scroll_apis.py  wait_apis.py
