[project]
name = "hrms-automate"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "selenium>=4.21.0",
    "pytest>=8.2.2",
    "webdriver-manager>=4.0.1",
    "faker>=19.8.0",
    "allure-pytest>=2.13.5",
    "cryptography>=44.0.0",
    "playsound>=1.3.0",
    "schedule>=1.2.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-dir = "src"

[tool.pdm.scripts]
start = {cmd = "python src/main.py"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
